--- a/index.html
+++ b/index.html
@@ -51,16 +51,33 @@
                 <p>Html</p>
                 <p>Css</p>
                 <p>Javascript</p>
-                <p>SQL Básico</p>
+                <p>Postgresql Básico</p>
                 <p>Office</p>
             </div>
         </div>
     </div>
     <div class="seccionEducacion">
         <h2>Educación:</h2>
-        <div></div>
+        <div class="contenedorEducacion">
+            <ul>
+                <li>Escuela Gabriela Mistral Jornada Simple: Bachiller Biológico.</li>
+                <li>Universidad Nacional de la Rioja: Estudiante de 4to año de la carrera Licenciatura en Sistemas de Información.</li>
+                <li>Universidad Nacional de la Rioja: Estudiante avanzado de Analista en Sistemas de Información.</li>
+                <li>Curso de HTML para Desarrollo Web.</li>
+                <li>Curso de CSS para desarrollo Web</li>
+                <li>Curso de Javascript para desarrollo web.</li>
+            </ul>
+        </div>
     </div>
-    <div></div>
+    <div class="seccionExperienciaLaboral">
+        <h2>Experiencia</h2>
+        <div>
+            <ul>
+                <li>Desarrollo de Página Web en Wordpress.</li>
+                <li>Participacion en el concurso Patagonia Emprende 2016</li>
+            </ul>
+        </div>
+    </div>
 </body>
 
 </html>
