--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         </div>
         <div class="redes">
             <p>Linkedin:</p>
-            <a href=""><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/jose-gho-7168261a7/"><i class="fab fa-linkedin"></i></a>
             <p>Facebook:</p>
-            <a href=""><i class="fab fa-facebook"></i></a>
+            <a href="https://www.facebook.com/jose.gho.9"><i class="fab fa-facebook"></i></a>
             <p>Email:</p>
-            <a href=""><i class="far fa-envelope"></i></a>
+            <a href="#"><i class="far fa-envelope"></i></a>
             <p>Github:</p>
-            <a href=""><i class="fab fa-github"></i></a>
+            <a href="https://github.com/JGho00"><i class="fab fa-github"></i></a>
         </div>
     </header>
     <div class="descripcionGeneral">
@@ -38,21 +38,25 @@
         <div class="contenedorCompetencias">
             <div class="competencias">
                 <h3>Personales</h3>
-                <p>Comunicacion</p>
-                <p>Trabajo en Equipo</p>
-                <p>Programacion</p>
-                <p>Pragmatico</p>
-                <p>Creatividad</p>
-                <p>Compromiso</p>
+                <ul>
+                    <li>Comunicacion</li>
+                    <li>Trabajo en Equipo</li>
+                    <li>Programacion</li>
+                    <li>Pragmatico</li>
+                    <li>Creatividad</li>
+                    <li>Compromiso</li>
+                </ul>
             </div>
             <div class="competencias">
                 <h3>Software</h3>
-                <p>Front End</p>
-                <p>Html</p>
-                <p>Css</p>
-                <p>Javascript</p>
-                <p>Postgresql Básico</p>
-                <p>Office</p>
+                <ul>
+                    <li>Front End</li>
+                    <li>Html</li>
+                    <li>Css</li>
+                    <li>Javascript</li>
+                    <li>Postgresql Básico</li>
+                    <li>Microsoft Office</li>
+                </ul>
             </div>
         </div>
     </div>
@@ -76,6 +80,18 @@
                 <li>Desarrollo de Página Web en Wordpress.</li>
                 <li>Participacion en el concurso Patagonia Emprende 2016</li>
             </ul>
+        </div>
+    </div>
+    <div class="seccionInformacion">
+        <h2>Datos de contacto</h2>
+        <div class="contenidoInformacion">
+            <p>Dirección: Faldeo del Velazco Sur Manzana G nro4, La Rioja Argentina</p>
+            <p>Email: josegho001@gmail.com</p>
+            <p>Telefono: 3804367458</p>
+            <p><a class="enlaces" href="https://www.linkedin.com/in/jose-gho-7168261a7/">Linkedin</a></p>
+            <p><a class="enlaces" href="https://github.com/JGho00">Repositorio Github</a></p>
+
+
         </div>
     </div>
 </body>
