--- a/index.html
+++ b/index.html
@@ -5,26 +5,31 @@
     <title></title>
     <link rel="stylesheet" type="text/css" href="estilos.css">
     <script src="https://kit.fontawesome.com/a29cfbb9b6.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
-        <div class="logoImg">
-            <img src="/img/imgCv.png" alt="">
+        <div class="cabecera">
+            <div class="logoImg">
+                <img src="img/imgCv.png" alt="">
+            </div>
+            <div class="nombreHeader">
+                <h1>Gho Silva José Nicolás</h1>
+                <p>"Proactivo,comprometido y entusiasta"</p>
+            </div>
         </div>
-        <div class="nombreHeader">
-            <h1>Gho Silva José Nicolás</h1>
-            <p>"Proactivo,comprometido y entusiasta"</p>
-        </div>
-        <div class="redes">
-            <p>Linkedin:</p>
-            <a href="https://www.linkedin.com/in/jose-gho-7168261a7/"><i class="fab fa-linkedin"></i></a>
-            <p>Facebook:</p>
-            <a href="https://www.facebook.com/jose.gho.9"><i class="fab fa-facebook"></i></a>
-            <p>Email:</p>
-            <a href="#"><i class="far fa-envelope"></i></a>
-            <p>Github:</p>
-            <a href="https://github.com/JGho00"><i class="fab fa-github"></i></a>
+
+        <div>
+            <nav>
+                <a href="#seccionEducacion">Educacion</a>
+                <a href="#seccionExperiencia">Experiencia</a>
+                <a href="#seccionCompetencias">Competencias</a>
+                <a href="">Tecnologías</a>
+                <a href="#seccionContacto">Contacto</a>
+                <a href="#proyectosRealizados">Portafolio</a>
+            </nav>
         </div>
     </header>
     <div class="descripcionGeneral">
@@ -33,16 +38,16 @@
         </p>
     </div>
 
-    <div class="seccionCompetencias">
+    <div class="seccionCompetencias" id="seccionCompetencias">
         <h2>Competencias:</h2>
-        <div class="contenedorCompetencias">
-            <div class="competencias">
+        <div class="contenedorCompetencias ">
+            <div class="competencias ">
                 <h3>Personales</h3>
                 <ul>
-                    <li>Comunicacion</li>
+                    <li>Comunicación</li>
                     <li>Trabajo en Equipo</li>
-                    <li>Programacion</li>
-                    <li>Pragmatico</li>
+                    <li>Programación</li>
+                    <li>Pragmático</li>
                     <li>Creatividad</li>
                     <li>Compromiso</li>
                 </ul>
@@ -60,20 +65,33 @@
             </div>
         </div>
     </div>
-    <div class="seccionEducacion">
+    <div class="seccionEducacion" id="seccionEducacion">
         <h2>Educación:</h2>
         <div class="contenedorEducacion">
             <ul>
-                <li>Escuela Gabriela Mistral Jornada Simple: Bachiller Biológico.</li>
-                <li>Universidad Nacional de la Rioja: Estudiante de 4to año de la carrera Licenciatura en Sistemas de Información.</li>
-                <li>Universidad Nacional de la Rioja: Estudiante avanzado de Analista en Sistemas de Información.</li>
+                <li><b>Escuela Gabriela Mistral Jornada Simple:</b> Bachiller Biológico.</li>
+                <li><b>Universidad Nacional de la Rioja:</b> Estudiante de 4to año de la carrera Licenciatura en Sistemas de Información.</li>
+                <li><b>Universidad Nacional de la Rioja:</b> <b>Titulo Intermedio Analista en Sistemas</b> de la carrera Licenciatura en Sistemas de Información.</li>
                 <li>Curso de HTML para Desarrollo Web.</li>
                 <li>Curso de CSS para desarrollo Web</li>
                 <li>Curso de Javascript para desarrollo web.</li>
+                <li>Conocimientos básicos en PostgreSQL.</li>
             </ul>
         </div>
+        <div class="certificados">
+            <h2>Certificados:</h2>
+            <div class="imgcertificados">
+                <ul>
+                    <li>Certificación Curso Desarrollo Web. CSS desde 0. <a href="https://www.udemy.com/certificate/UC-b58e291b-fb37-4d0c-b965-75c4066132af/" target="_blank">Ver Certificacion</a></li>
+                    <li>Certificación Curso Desarrollo Web. Javascript completo.<a href="https://www.udemy.com/certificate/UC-c64d4f4b-b546-4bb6-b7aa-8be07df7de09/" target="_blank">Ver Certificacion</a></li>
+                    <li>Curso de HTML para Desarrollo Web.<a href="https://www.udemy.com/certificate/UC-aad58bb4-2436-4944-a6a7-1bbe2d210026/" target="_blank">Ver Certificacion</a></li>
+                    <li>Scrum Fundamentals Certified.<a href="https://c46e136a583f7e334124-ac22991740ab4ff17e21daf2ed577041.ssl.cf1.rackcdn.com/Certificate/ScrumFundamentalsCertified-GhoSilvaJos%C3%A9Nicol%C3%A1s.-845662.pdf" target="_blank">Ver Certificacion</a></li>
+
+                </ul>
+            </div>
+        </div>
     </div>
-    <div class="seccionExperienciaLaboral">
+    <div class="seccionExperienciaLaboral" id="seccionExperiencia">
         <h2>Experiencia</h2>
         <div>
             <ul>
@@ -82,18 +100,51 @@
             </ul>
         </div>
     </div>
-    <div class="seccionInformacion">
+
+    <div class="proyectosRealizados" id="proyectosRealizados">
+        <h2>Proyectos Realizados</h2>
+        <div class="contenedorProyectos ">
+            <div id="carouselExampleInterval" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <img src="img/proyectoMcDonals.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <img src="img/proyectoOle.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+        <div class="otrosProyectos">
+            <a href="https://mcdonals.netlify.app/index.html" target="_blank">MCDONAL´S</a>
+            <a href="#">Olé Diario Deportivo</a>
+        </div>
+    </div>
+    <div class="seccionInformacion" id="seccionContacto">
         <h2>Datos de contacto</h2>
-        <div class="contenidoInformacion">
-            <p>Dirección: Faldeo del Velazco Sur Manzana G nro4, La Rioja Argentina</p>
-            <p>Email: josegho001@gmail.com</p>
-            <p>Telefono: 3804367458</p>
-            <p><a class="enlaces" href="https://www.linkedin.com/in/jose-gho-7168261a7/">Linkedin</a></p>
-            <p><a class="enlaces" href="https://github.com/JGho00">Repositorio Github</a></p>
+        <div class="contenidoInformacion ">
+            <p><b>Email:</b> josegho001@gmail.com</p>
+            <p><b>Dirección:</b> Faldeo del Velazco Sur Manzana G nro4, La Rioja Argentina</p>
+            <p><b>Telefono:</b>> 3804367458</p>
+            <p><a class="enlaces" href="https://www.linkedin.com/in/ghosilvajose/" target="_blank"><i class="fab fa-linkedin"></i> Linkedin</a></p>
+            <p><a class="enlaces" href="https://github.com/JGho00 " target="_blank"><i class="fab fa-github"></i> Github</a></p>
 
 
         </div>
     </div>
+    <footer class="footer">
+        <div>
+            <h6>@Copyright José Nicolás Gho Silva</h6>
+        </div>
+    </footer>
 </body>
 
 </html>
